--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ body {
   width: 100%;
   font-family: "Roboto", "Arial", sans-serif;
   background: linear-gradient(#516278, #49576b);
-  min-height: 400px;
+  min-height: 25rem;
 }
 
 .container {
   margin: 0 auto;
   width: 100%;
-  max-width: 1140px;
+  max-width: 71.25rem;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -37,7 +37,7 @@ body {
 }
 
 .todo__wrapper {
-  border-radius: 10px;
+  border-radius: 1rem;
   padding: 3rem;
   width: auto;
   min-width: 40rem;
@@ -47,7 +47,7 @@ body {
   display: grid;
   grid-template-rows: 1fr 2fr;
   gap: 2rem;
-  box-shadow: 8px 8px 10px rgb(33 33 33 / 50%);
+  box-shadow: 0.5rem 0.5rem 0.6rem rgb(33 33 33 / 50%);
 }
 
 .todo__container {
@@ -89,19 +89,19 @@ input[type="checkbox"] {
 }
 
 .todo__task>div {
-  margin: 5px auto;
+  margin: 0.3rem auto;
 }
 
 .todo__task img {
   border-radius: 50%;
   margin: 0 1rem;
   cursor: pointer;
-  width: 25px;
-  height: 25px;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .todo__task img:hover {
-  box-shadow: 8px 8px 10px rgb(33 33 33 / 50%);
+  box-shadow: 0.5rem 0.5rem 0.6rem rgb(33 33 33 / 50%);
 }
 
 .todo__task_complete {
