optimized programm code

--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ input[type="checkbox"] {
 .todo__task>div {
   margin: 0.3rem auto;
 }
-.todo__task .edit-btn, .todo__task .del-btn {
+
+.todo__task .edit-btn, .todo__task .delete-button {
   border: none;
   border-radius: 50%;
   margin: 0 1rem;
