--- a/style.css
+++ b/style.css
@@ -142,3 +142,17 @@ input[type="checkbox"] {
   width: 15rem;
   height: 2rem;
 }
+
+.error {
+  display: none;
+  padding: 2rem;
+  color: red;
+  box-shadow: 0.5rem 0.5rem 0.6rem rgb(33 33 33 / 50%);
+  border-radius: 0.3rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  background-color: #bdb5b5;
+}
